--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>CSS Gradient Generator</title>
+        <title>Graditude</title>
         <link rel="stylesheet" href="styles.css"> 
         <script src="script.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@900&display=swap" rel="stylesheet">
